# toodles

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  config.example.toml  skills-lock.json
.agent/skills/: elite-powerpoint-designer
.github/workflows/: ci.yml
benches/: escape_html.rs
scripts/: make_service_env.py
src/: acp.rs  aggregator.rs  config.rs  main.rs  session.rs  setup.rs  telegram_api.rs  transcription.rs
src/handlers/: document.rs  message.rs  mod.rs  photo.rs  voice.rs
