[package]
name = "toodles"
version = "0.1.0"
edition = "2021"
description = "Telegram bot wrapper for gemini-cli"
license = "MIT"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "throttle"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "multipart"] }
