[package]
name = "toodles"
version = "0.1.0"
edition = "2021"
description = "Telegram bot wrapper for gemini-cli"
license = "MIT"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "throttle"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
transcribe-rs = { version = "0.2.2", features = ["parakeet"] }
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
dirs = "6"
indicatif = "0.17"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "escape_html"
harness = false
